# data-science-team-agent

./: Makefile  README.md  pyproject.toml
data_science_team_agent/: main.py
data_science_team_agent/agents/: data_cleaning_agent.py  data_loader_tools_agent.py  data_visualization_agent.py  data_wrangling_agent.py  feature_engineering_agent.py  sql_database_agent.py  workflow_planner_agent.py
data_science_team_agent/ds_agents/: eda_tools_agent.py
data_science_team_agent/ml_agents/: h2o_ml_agent.py  mlflow_tools_agent.py
data_science_team_agent/multiagents/: pandas_data_analyst.py  sql_data_analyst.py  supervisor_ds_team.py
data_science_team_agent/parsers/: parsers.py
data_science_team_agent/templates/: agent_templates.py
data_science_team_agent/tools/: data_loader.py  dataframe.py  eda.py  h2o.py  mlflow.py  sql.py
data_science_team_agent/utils/: messages.py
tests/: test_main.py
